[project]
description = "Implementation for \"CHASE: LLM Agents for Dissecting Malicious PyPI Packages\" presented at 2nd ACM International Conference on AI-powered Software (AIware 2025)"
name = "chase-aiware25"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cryptography>=46.0.3",
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "langchain<1.0.0",
    "langchain-community>=0.3.31",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.35",
    "langchain-sandbox>=0.0.6",
    "langchain-tavily==0.2.10",
    "langgraph==0.5.3",
    "ollama>=0.6.1",
    "openevals>=0.1.3",
    "pyright>=1.1.408",
    "python-magic>=0.4.27",
    "vt-py>=0.22.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
